--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -2,7 +2,7 @@
        <div class="lists-navigator clearfix">   
          <ol class="page-navigator">
         <li class="current">
-            <a href="{{ site.url }}" data-hover="首页">
+            <a href="{{ site.url }}?liberxuepage=1" data-hover="首页">
                 <span>首页</span>
             </a>
         </li>
