--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -2,7 +2,7 @@
        <div class="lists-navigator clearfix">   
          <ol class="page-navigator">
         <li class="current">
-            <a href="{{ site.url }}?liberxuepage=1" data-hover="首页">
+            <a href="{{ site.url }}liberxuepage" data-hover="首页">
                 <span>首页</span>
             </a>
         </li>
@@ -11,9 +11,9 @@
             <span>&laquo;</span>
         {% else %}
             {% if paginator.previous_page == 1 %}
-            <a href="{{ site.url }}?liberxuepage=1">
+            <a href="{{ site.url }}liberxuepage">
             {% else %}
-            <a href="{{ site.url }}?liberxuepage={{ paginator.previous_page }}" >
+            <a href="{{ site.url }}liberxuepage{{ paginator.previous_page }}" >
             {% endif %}
                 <span>&laquo;</span>
             </a>
@@ -28,7 +28,7 @@
             {% if i == 1 %}
             <a href="{{ site.url }}" data-hover="{{i}}">{{i}}</a>
             {% else %}
-            <a href="{{ site.url }}?liberxuepage={{i}}" data-hover="{{i}}">{{i}}</a>
+            <a href="{{ site.url }}liberxuepage{{i}}" data-hover="{{i}}">{{i}}</a>
             {% endif %}
         </li>
         {% endfor %}
@@ -36,13 +36,13 @@
             {% if paginator.page == paginator.total_pages %}
             <span>&raquo;</span>
             {% else %}
-            <a href="{{ site.url }}?liberxuepage={{ paginator.next_page }}" data-hover="&raquo;">
+            <a href="{{ site.url }}liberxuepage{{ paginator.next_page }}" data-hover="&raquo;">
                 <span>&raquo;</span>
             </a>
             {% endif %}
         </li>
         <li>
-            <a href="{{ site.url }}?liberxuepage={{paginator.total_pages}}" data-hover="末页">
+            <a href="{{ site.url }}liberxuepage{{paginator.total_pages}}" data-hover="末页">
                 <span>末页</span>
             </a>
         </li>
