--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -2,7 +2,7 @@
        <div class="lists-navigator clearfix">   
          <ol class="page-navigator">
         <li class="current">
-            <a href="{{ site.url }}pageNum" data-hover="首页">
+            <a href="{{ site.url }}pageNum1" data-hover="首页">
                 <span>首页</span>
             </a>
         </li>
@@ -11,7 +11,7 @@
             <span>&laquo;</span>
         {% else %}
             {% if paginator.previous_page == 1 %}
-            <a href="{{ site.url }}pageNum">
+            <a href="{{ site.url }}pageNum1">
             {% else %}
             <a href="{{ site.url }}pageNum{{ paginator.previous_page }}" >
             {% endif %}
@@ -26,7 +26,7 @@
         <li>
             {% endif %}
             {% if i == 1 %}
-            <a href="{{ site.url }}" data-hover="{{i}}">{{i}}</a>
+            <a href="{{ site.url }}pageNum1" data-hover="{{i}}">{{i}}</a>
             {% else %}
             <a href="{{ site.url }}pageNum{{i}}" data-hover="{{i}}">{{i}}</a>
             {% endif %}
