--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,7 +32,7 @@ LLLLLLLLLLLLLLLLLLLLLLLLiiiiiiiibbbbbbbbbbbbbbbb       eeeeeeeeeeeeee   rrrrrrr 
   <link rel="canonical" href="{{ site.url }}/">
   <link rel="alternate" type="application/rss+xml" title="Liberxue" href="{{ site.url }}/feed.xml">
   <meta charset="UTF-8">  
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="{{ site.url }}/manifest.json">
   <link rel="shortcut icon" href="{{ site.url }}/style/favicons/favicon.ico" type="image/x-icon">
   <meta name="keywords"  content="{{ site.title }}|{{ site.signoff}}|{{ page.content | strip_html | strip_newlines | truncate: 120 }}" property='og:description' />
   <meta name="description" content="{{ site.description }}|{{ site.title }}" />
