--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -14,7 +14,7 @@
             <div class="meta-item meta-copyright">
                 <div class="meta-copyright-info">
                     <a href="{{ site.url }}" class="info-logo">
-                         <img src="{{ site.url }}{{ logourl }}"   title="访问" data-hover="Saras_Blog" alt="Saras_Blog" /> </a>
+                         <img src="{{ site.url }}{{ site.logourl }}"   title="访问" data-hover="Saras_Blog" alt="Saras_Blog" /> </a>
                     <div class="info-text">
                         <p>Theme is <a href="http://www.liberxue.com/2017/08/03/Jekyllthemes.html" title="访问 Jekyll liberxue主题"  data-hover="Jekyll liberxue"target="_blank">Jekyll liberxue</a> by <a href="http://www.liberxue.com/about" target="_blank">liberxue</a></p>
                         <p>Powered by <a href="{{ site.url }}/tags/#Jekyll" title="Jekyll" data-hover="Jekyll" target="_blank" rel="nofollow">Jekyll</a></p>
