--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -6,6 +6,23 @@
     <meta content='{{ page.title }} - {{ site.title }}' name='og:title' />
     <title>{{ page.title }} - {{ site.title }}</title>
     {% include head.html %}
+    <style type="text/css">
+      #saras-icon-share a::before{
+           /* color: #eb5055; */
+          content: attr(data-hover);
+          /* position: absolute; */
+          outline:0;
+          white-space: nowrap;
+          /* opacity: 0; */
+          text-shadow: 0 0 1px rgba(255,255,255,0.3);
+          -webkit-transform: scale(1.1) translateX(10px) translateY(-10px) rotate(4deg);
+          -moz-transform: scale(1.1) translateX(10px) translateY(-10px) rotate(4deg);
+          transform: scale(1.1) translateX(10px) translateY(-10px) rotate(4deg);
+          -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
+          -moz-transition: -moz-transform 0.3s, opacity 0.3s;
+          transition: transform 0.3s, opacity 0.3s;
+      }
+    </style>>
   </head>
 <body class="" gtools_scp_screen_capture_injected="true">
 <header id="header" class="header bg-white">
@@ -102,7 +119,7 @@
 			本文由 <a href="/">liberxue</a> 创作，采用 <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="external nofollow">知识共享署名4.0</a> 国际许可协议进行许可<br>本站文章除注明转载/出处外，均为本站原创或翻译，转载前请务必署名<br>最后编辑时间为:{{ page.date | date: "%F %H:%M:%S"}}</p> -->
 	 <div style="text-align:center;">
 		{% if site.social-share %}
-    <div class="social-share-wrapper">
+    <div class="social-share-wrapper" id="saras-icon-share">
         <div class="social-share"></div>
     </div>
     {% endif %}
