--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -10,10 +10,10 @@
       #saras-icon-share a::before{
            /* color: #eb5055; */
           content: attr(data-hover);
-          /* position: absolute; */
+          position: static;
           outline:0;
           white-space: nowrap;
-          /* opacity: 0; */
+          opacity: 1; 
           text-shadow: 0 0 1px rgba(255,255,255,0.3);
           -webkit-transform: scale(1.1) translateX(10px) translateY(-10px) rotate(4deg);
           -moz-transform: scale(1.1) translateX(10px) translateY(-10px) rotate(4deg);
