--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -9,7 +9,8 @@
     <style type="text/css">
       #saras-icon-share a::before{
            /* color: #eb5055; */
-          content: attr(data-hover);
+          /*content: attr(data-hover);*/
+          color: inherit;
           position: static;
           outline:0;
           white-space: nowrap;
