--- a/_includes/head.html
+++ b/_includes/head.html
@@ -50,3 +50,4 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 {% endif %}
+{% include newsletter.html %}
