--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,7 @@
                  {% endfor %}
             </ul>
         </div>
+        <a href="mailto:saras_xu@163.com">send mail</a>
     </div>
 </header>
 
