--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
            {% for link in site.links %}             
             <a href="{{ site.url }}{{ link.url }}"  title="访问 {{  link.name }}" data-hover="{{link.name}}">{{ link.name }}</a>
                 {% endfor %}
+            <a href="mailto:saras_xu@163.com" title="发送邮件">email</a>
           </div>
         <div class="navbar-search" onclick="">
             <span class="icon-search"></span>
@@ -33,9 +34,10 @@
                {% for link in site.links %}           
                 <li><a href="{{ site.url }}{{ link.url }}" title="访问 {{  link.name }}" data-hover="{{link.name}}">{{ link.name }}</a></li>
                  {% endfor %}
+                 <li><a href="mailto:saras_xu@163.com">email</a></li>
             </ul>
         </div>
-        <a href="mailto:saras_xu@163.com">send mail</a>
+
     </div>
 </header>
 
