--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -125,6 +125,27 @@
     </div>
     {% endif %}
 	</div>
+  <section class="author-detail">
+    <section class="post-footer-item author-card">
+        <div class="avatar">
+            <img src="{{ site.avatar }}" alt="">
+        </div>
+        <div class="author-name" rel="author">{{ site.author }}</div>
+        <div class="bio">
+            <p>{{ site.bio }}</p>
+        </div>
+        {% if site.sns.size > 0 %}
+        <ul class="sns-links">
+            {% for s in site.sns %}
+            <li>
+                <a href="{{ s[1] }}" target="_blank">
+                    <i class="iconfont icon-{{ s[0] }}"></i>
+                </a>
+            </li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+    </section>
 	</div>
 </article>
 
