--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -125,6 +125,7 @@
     </div>
     {% endif %}
 	</div>
+  <div style="text-align:center;">
   <section class="author-detail">
     <section class="post-footer-item author-card">
         <div class="avatar">
@@ -146,6 +147,7 @@
         </ul>
         {% endif %}
     </section>
+    </div>
 	</div>
 </article>
 
