--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
   <link rel="manifest" href="{{ site.url }}/manifest.json">
   <link rel="shortcut icon" href="{{ site.url }}/style/favicons/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="{{ site.url }}assets/css/share.min.css">
-  <link href="{{ site.url }}assets/css/app.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="{{ site.url }}assets/css/author.css">
   <meta name="keywords"  content="{{ site.title }}|{{ site.signoff}}|{{ page.content | strip_html | strip_newlines | truncate: 120 }}" property='og:description' />
   <meta name="description" content="{{ site.description }}|{{ site.title }}" />
   <link href="https://cdn.bootcss.com/highlight.js/9.10.0/styles/xcode.min.css" rel="stylesheet">
