--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -132,6 +132,7 @@
             <img src="{{ site.avatar }}" alt="">
             <a href="mailto:{{ site.email }}"><p>联系{{ site.author }}</p></a>
         </div>
+        <div class="author-name" rel="author"><a href="mailto:{{ site.email }}">联系{{ site.author }}</a></div>
     </section>
 </article>
 
