--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -130,9 +130,8 @@
     <section class="post-footer-item author-card">
         <div class="avatar">
             <img src="{{ site.avatar }}" alt="">
-            <a href="mailto:{{ site.email }}"><p>联系{{ site.author }}</p></a>
         </div>
-        <div class="author-name" rel="author"><a href="mailto:{{ site.email }}">联系{{ site.author }}</a></div>
+        <div class="author-name" rel="author"><a href="mailto:{{ site.email }}">Email {{ site.author }}</a></div>
     </section>
 </article>
 
