--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -2,7 +2,7 @@
 	<div class="footer-social">
 		<div class="footer-container clearfix">
 			<div class="social-list">
-	<a class="social sina" target="blank" href="http://weibo.com/sarasxu" title="访问 SarasXu_sina" data-hover="WeiBo">WeiBo</a>
+	<a class="social sina" target="blank" href="http://weibo.com/sarasxu" title="访问 SarasXu_Weibo" data-hover="Weibo">Weibo</a>
     <a class="social github" target="blank" href="https://github.com/SarasXu" title="访问 SarasXu_GitHub" data-hover="GitHub">GitHub</a>
      <a class="social stackoverflow" target="blank" href="https://stackoverflow.com" title="访问 stackoverflow" data-hover="StackOverflow">StackOverflow</a>
           <a class="social oschina" target="blank" href="https://my.oschina.net/u/3443573" title="访问 SarasXu_Oschina" data-hover="Oschina">Oschina</a>
@@ -18,7 +18,8 @@
                     <div class="info-text">
                         <p>Theme is <a href="http://www.liberxue.com/2017/08/03/Jekyllthemes.html" title="访问 Jekyll liberxue主题"  data-hover="Jekyll liberxue"target="_blank">Jekyll liberxue</a> by <a href="http://www.liberxue.com/about" target="_blank">liberxue</a></p>
                         <p>Powered by <a href="{{ site.url }}/tags/#Jekyll" title="Jekyll" data-hover="Jekyll" target="_blank" rel="nofollow">Jekyll</a></p>
-                        <p>&copy; 2017 <a href="https://github.com/SarasXu"  title="访问 sarasXu github" data-hover="sarasXu github">Saras Github</a></p>
+                        <p>&copy; 2017 <a href="https://github.com/SarasXu"  title="访问 Saras github" data-hover="Saras's Github">Saras's Github</a></p>
+                        <p><a href=href="mailto:{{ site.email }}" title="发送邮件给Saras" data-hover="Email Saras">Email Saras</a></p>
                     </div>
                 </div>
             </div>
