--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,10 +15,10 @@
     <div class="navbar-container">
       <a href="{{ site.url }}" title="访问 {{  site.title }}" class="navbar-logo"> <img src="{{ site.url }}{{ site.logourl }}" alt="{{ site.title }}"> </a>
         <div class="navbar-menu">
+          <a href="{{ site.url }}" title="访问 {{  site.title }}" class="navbar-logo"> <img src="{{ site.url }}{{ site.avatar }}" alt="{{ site.title }}"> </a>
            {% for link in site.links %}             
             <a href="{{ site.url }}{{ link.url }}"  title="访问 {{  link.name }}" data-hover="{{link.name}}">{{ link.name }}</a>
                 {% endfor %}
-            <a href="mailto:{{ site.email }}" title="发送邮件">email</a>
           </div>
         <div class="navbar-search" onclick="">
             <span class="icon-search"></span>
@@ -34,7 +34,6 @@
                {% for link in site.links %}           
                 <li><a href="{{ site.url }}{{ link.url }}" title="访问 {{  link.name }}" data-hover="{{link.name}}">{{ link.name }}</a></li>
                  {% endfor %}
-                 <li><a href="mailto:{{ site.email }}">email</a></li>
             </ul>
         </div>
 
