修改邮件加载

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -18,7 +18,7 @@
                     <div class="info-text">
                         <p>Theme is <a href="http://www.liberxue.com/2017/08/03/Jekyllthemes.html" title="访问 Jekyll liberxue主题"  data-hover="Jekyll liberxue"target="_blank">Jekyll liberxue</a> by <a href="http://www.liberxue.com/about" target="_blank">liberxue</a></p>
                         <p>Powered by <a href="{{ site.url }}/tags/#Jekyll" title="Jekyll" data-hover="Jekyll" target="_blank" rel="nofollow">Jekyll</a></p>
-                        <p><a href=href="mailto:{{ site.email }}" title="发送邮件给Saras" data-hover="Email Saras">Email Saras</a></p>
+                        <p><a href="mailto:{{ site.email }}" title="发送邮件给Saras" data-hover="Email Saras">Email Saras</a></p>
                         <p>&copy; 2017 <a href="https://github.com/SarasXu"  title="访问 Saras github" data-hover="Saras's Github">Saras's Github</a></p>
                     </div>
                 </div>
